[package]
name = "chat-async"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = { version = "0.3", features = ["sink"] }
http = "1.4.0"
tokio = { version = "1.28", features = ["full"] }
tokio-websockets = { version = "0.13.2", features = ["client", "server", "fastrand", "sha1_smol"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
